// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DatePicker > Snapshots > matches default snapshot 1`] = `
<button
  aria-controls="radix-«r0»"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="button button--outline button--default-size datePicker__trigger datePicker__trigger--placeholder"
  data-state="closed"
  data-testid="datepicker"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-calendar datePicker__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 2v4"
    />
    <path
      d="M16 2v4"
    />
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="4"
    />
    <path
      d="M3 10h18"
    />
  </svg>
  <span>
    Pick a date
  </span>
</button>
`;

exports[`DatePicker > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-controls="radix-«r1»"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="button button--outline button--default-size datePicker__trigger datePicker__trigger--placeholder"
  data-state="closed"
  data-testid="datepicker"
  disabled=""
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-calendar datePicker__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 2v4"
    />
    <path
      d="M16 2v4"
    />
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="4"
    />
    <path
      d="M3 10h18"
    />
  </svg>
  <span>
    Pick a date
  </span>
</button>
`;

exports[`DatePicker > Snapshots > matches selected state snapshot 1`] = `
<button
  aria-controls="radix-«r2»"
  aria-expanded="false"
  aria-haspopup="dialog"
  class="button button--outline button--default-size datePicker__trigger datePicker__trigger--placeholder"
  data-state="closed"
  data-testid="datepicker"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-calendar datePicker__icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 2v4"
    />
    <path
      d="M16 2v4"
    />
    <rect
      height="18"
      rx="2"
      width="18"
      x="3"
      y="4"
    />
    <path
      d="M3 10h18"
    />
  </svg>
  <span>
    Pick a date
  </span>
</button>
`;
